One more s/debootstrap/poldek/

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-ganeti-instance-debootstrap
+ganeti-instance-poldek
 ===========================
 
 This is a guest OS definition for Ganeti (http://code.google.com/p/ganeti).
